--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,34 @@
     <string name="dias_disponiveis">Dias disponiveis</string>
     <string name="selecionar_dia">Selecionar</string>
     <string name="voltar_agenda">Voltar</string>
+    <string name="username">Usuario</string>
+    <string name="password">senha</string>
+    <string name="horario_prompt">Escolha seu horario</string>
+    <string name="nossos_profissionais">Nossos Profissionais</string>
+    <string name="historico">Historico</string>
+    <string name="selecione_a_data">Selecione a data</string>
+    <string-array name="horarios">
+        <item>10:00</item>
+        <item>10:30</item>
+        <item>11:00</item>
+        <item>11:30</item>
+        <item>13:00</item>
+        <item>13:30</item>
+        <item>14:00</item>
+        <item>14:30</item>
+        <item>15:00</item>
+        <item>15:30</item>
+        <item>16:00</item>
+        <item>16:30</item>
+        <item>17:00</item>
+        <item>17:30</item>
+        <item>18:00</item>
+        <item>18:30</item>
+        <item>19:00</item>
+        <item>19:30</item>
+        <item>20:00</item>
+        <item>20:30</item>
+        <item>21:00</item>
+        <item>21:30</item>
+    </string-array>
 </resources>
